Bug 303200 - Incorrect signal connects for activities in WorkspaceWrapper
Summary: Incorrect signal connects for activities in WorkspaceWrapper
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: scripting (other bugs)
Version First Reported In: 4.8.90
Platform: unspecified Linux
: NOR normal
Target Milestone: 4.9 RC 2
Assignee: Martin Flöser
URL: https://git.reviewboard.kde.org/r/105...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-08 17:07 UTC by Martin Flöser
Modified: 2012-07-09 04:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Flöser 2012-07-08 17:07:48 UTC
When starting scripting the following incorrect connects are reported:

Object::connect: No such signal KWin::WorkspaceWrapper::currentActivityChanged(QString)
Object::connect: No such signal KWin::WorkspaceWrapper::activitiesChanged()
Object::connect: No such signal KWin::WorkspaceWrapper::activitiesChanged()

this bug has been introduced with git rev 3071d561f5708ddc40aad3e9e6ed5218476fe64b and falls into the category of compiling is not enough.
Comment 1 Martin Flöser 2012-07-09 04:31:30 UTC
Git commit 40284b3c6cdbbbec95331327bea0c47a5d40cf9b by Martin Gräßlin.
Committed on 06/07/2012 at 18:13.
Pushed by graesslin into branch 'KDE/4.9'.

Fix incorrect connects of Activities in WorkspaceWrapper

Remember: a compiling connect does not mean it is correct.
FIXED-IN: 4.9.0
REVIEW: 105480

M  +2    -2    kwin/scripting/workspace_wrapper.cpp
M  +2    -1    kwin/scripting/workspace_wrapper.h

http://commits.kde.org/kde-workspace/40284b3c6cdbbbec95331327bea0c47a5d40cf9b