Fix incorrect connects of Activities in WorkspaceWrapper

Remember: a compiling connect does not mean it is correct.

BUG: 303200
FIXED-IN: 4.9.0
REVIEW: 105480